--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
     <!-- projects -->
     <header class="project-hero">
       <!-- section-title -->
-      <div class="section-title project-title">
+      <div class="section-title project-hero-title">
         <h1>my projects</h1>
         <div class="underline"></div>
       </div>
