fixed large screen layout

--- a/index.html
+++ b/index.html
@@ -225,50 +225,58 @@
       </div>
       <!-- end of section-title -->
       <div class="section-center projects-center">
-        <article class="project">
-          <img
-            src="./images/project-1.jpeg"
-            alt="project name"
-            class="project-img"
-          />
-          <div class="project-info">
-            <h4>project title</h4>
-            <p>client name</p>
-          </div>
-        </article>
-        <article class="project">
-          <img
-            src="./images/project-2.jpeg"
-            alt="project name"
-            class="project-img"
-          />
-          <div class="project-info">
-            <h4>project title</h4>
-            <p>client name</p>
-          </div>
-        </article>
-        <article class="project">
-          <img
-            src="./images/project-3.jpeg"
-            alt="project name"
-            class="project-img"
-          />
-          <div class="project-info">
-            <h4>project title</h4>
-            <p>client name</p>
-          </div>
-        </article>
-        <article class="project">
-          <img
-            src="./images/project-4.jpeg"
-            alt="project name"
-            class="project-img"
-          />
-          <div class="project-info">
-            <h4>project title</h4>
-            <p>client name</p>
-          </div>
-        </article>
+        <a class="project-1" href="#">
+          <article class="project">
+            <img
+              src="./images/project-1.jpeg"
+              alt="project name"
+              class="project-img"
+            />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <a class="project-2" href="#">
+          <article class="project">
+            <img
+              src="./images/project-2.jpeg"
+              alt="project name"
+              class="project-img"
+            />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <a class="project-3" href="#">
+          <article class="project">
+            <img
+              src="./images/project-3.jpeg"
+              alt="project name"
+              class="project-img"
+            />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <a class="project-4" href="#">
+          <article class="project">
+            <img
+              src="./images/project-4.jpeg"
+              alt="project name"
+              class="project-img"
+            />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
       </div>
     </section>
     <!-- end of projects -->
@@ -447,15 +455,15 @@
             />
             <div class="blog-card-info">
               <h4>article title</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et nisi
-              ut a est eum tempora dolorum temporibus voluptatibus! Natus,
-              provident.
-            </p>
-            <div class="blog-card-footer">
-              <img src="/images/hero-img-small.jpeg" alt="author name">
-              <p>7 min read</p>
-            </div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et
+                nisi ut a est eum tempora dolorum temporibus voluptatibus!
+                Natus, provident.
+              </p>
+              <div class="blog-card-footer">
+                <img src="/images/hero-img-small.jpeg" alt="author name" />
+                <p>7 min read</p>
+              </div>
             </div>
           </div>
           <div class="card-side card-back">
@@ -471,15 +479,15 @@
             />
             <div class="blog-card-info">
               <h4>article title</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et nisi
-              ut a est eum tempora dolorum temporibus voluptatibus! Natus,
-              provident.
-            </p>
-            <div class="blog-card-footer">
-              <img src="/images/hero-img-small.jpeg" alt="author name">
-              <p>7 min read</p>
-            </div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et
+                nisi ut a est eum tempora dolorum temporibus voluptatibus!
+                Natus, provident.
+              </p>
+              <div class="blog-card-footer">
+                <img src="/images/hero-img-small.jpeg" alt="author name" />
+                <p>7 min read</p>
+              </div>
             </div>
           </div>
           <div class="card-side card-back">
@@ -495,15 +503,15 @@
             />
             <div class="blog-card-info">
               <h4>article title</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et nisi
-              ut a est eum tempora dolorum temporibus voluptatibus! Natus,
-              provident.
-            </p>
-            <div class="blog-card-footer">
-              <img src="/images/hero-img-small.jpeg" alt="author name">
-              <p>7 min read</p>
-            </div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et
+                nisi ut a est eum tempora dolorum temporibus voluptatibus!
+                Natus, provident.
+              </p>
+              <div class="blog-card-footer">
+                <img src="/images/hero-img-small.jpeg" alt="author name" />
+                <p>7 min read</p>
+              </div>
             </div>
           </div>
           <div class="card-side card-back">
@@ -519,15 +527,15 @@
             />
             <div class="blog-card-info">
               <h4>article title</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et nisi
-              ut a est eum tempora dolorum temporibus voluptatibus! Natus,
-              provident.
-            </p>
-            <div class="blog-card-footer">
-              <img src="/images/hero-img-small.jpeg" alt="author name">
-              <p>7 min read</p>
-            </div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et
+                nisi ut a est eum tempora dolorum temporibus voluptatibus!
+                Natus, provident.
+              </p>
+              <div class="blog-card-footer">
+                <img src="/images/hero-img-small.jpeg" alt="author name" />
+                <p>7 min read</p>
+              </div>
             </div>
           </div>
           <div class="card-side card-back">
@@ -540,33 +548,35 @@
     <!-- footer -->
     <footer class="footer-section">
       <ul class="social-icons">
-            <li>
-              <a href="https://www.facebook.com/" class="social-icon"
-                ><i class="fab fa-facebook"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/" class="social-icon"
-                ><i class="fab fa-linkedin"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://www.squarespace.com/" class="social-icon"
-                ><i class="fab fa-squarespace"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://www.behance.com/" class="social-icon"
-                ><i class="fab fa-behance"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/" class="social-icon"
-                ><i class="fab fa-instagram"></i
-              ></a>
-            </li>
-          </ul>
-            <p class="footer-text">&copy; <span id="date"></span> samuel akpo. all rights reserved</p>
+        <li>
+          <a href="https://www.facebook.com/" class="social-icon"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/" class="social-icon"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.squarespace.com/" class="social-icon"
+            ><i class="fab fa-squarespace"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.behance.com/" class="social-icon"
+            ><i class="fab fa-behance"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" class="social-icon"
+            ><i class="fab fa-instagram"></i
+          ></a>
+        </li>
+      </ul>
+      <p class="footer-text">
+        &copy; <span id="date"></span> samuel akpo. all rights reserved
+      </p>
     </footer>
     <script src="./js/app.js"></script>
   </body>
