added links to projects

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       </div>
       <!-- end of section-title -->
       <div class="section-center projects-center">
-        <a class="project-1" href="#">
+        <a class="project-1" href="projects.html">
           <article class="project">
             <img
               src="./images/project-1.jpeg"
@@ -238,7 +238,7 @@
             </div>
           </article>
         </a>
-        <a class="project-2" href="#">
+        <a class="project-2" href="projects.html">
           <article class="project">
             <img
               src="./images/project-2.jpeg"
@@ -251,7 +251,7 @@
             </div>
           </article>
         </a>
-        <a class="project-3" href="#">
+        <a class="project-3" href="projects.html">
           <article class="project">
             <img
               src="./images/project-3.jpeg"
@@ -264,7 +264,7 @@
             </div>
           </article>
         </a>
-        <a class="project-4" href="#">
+        <a class="project-4" href="projects.html">
           <article class="project">
             <img
               src="./images/project-4.jpeg"
